2020-10-13

** CHANGE **
- New StringUtil method: DateYMD

2019-08-27

** CHANGE **
- New helper methods for en-/decryption (CryptoUtil.vb)