@@ -1,19 +1,26 @@
-﻿Imports System.IO
+Imports System.IO
 Imports System.Text
 
+''' <summary>
+''' Simply text file manipulation.
+''' </summary>
 Public Class TextFileUtil
 
-   Public Shared Sub TxtWriteLine(ByVal textFile As String, ByVal textLine As String, Optional ByVal doAppend As Boolean = True)
+   Public Shared Function TxtReadFile(ByVal textFile As String) As String
 
-      Using writer As New StreamWriter(textFile, doAppend)
-         writer.WriteLine(textLine)
+      Dim file As String = String.Empty
+
+      Using reader As New StreamReader(textFile)
+         file = reader.ReadToEnd
       End Using
 
-   End Sub
+      Return file
+
+   End Function
 
    Public Shared Function TxtReadLine(ByVal textFile As String) As String
 
-      Dim line As String
+      Dim line As String = String.Empty
 
       Using reader As New StreamReader(textFile)
          line = reader.ReadLine()
@@ -22,5 +29,13 @@ Public Class TextFileUtil
       Return line
 
    End Function
+
+   Public Shared Sub TxtWriteLine(ByVal textFile As String, ByVal textLine As String, Optional ByVal doAppend As Boolean = True)
+
+      Using writer As New StreamWriter(textFile, doAppend)
+         writer.WriteLine(textLine)
+      End Using
+
+   End Sub
 
 End Class
